libaddr (1.0.18.0~xenial) xenial; urgency=high

  * Cleaned up the exceptions (name, use macros).
  * Modernize the `mk` script.
  * Renamed the test `unittest` (planning unification).
  * Added the #include poison.h to all .cpp files.
  * Started moving things around so we have the library and tools separated.
  * Moved header files out of the sub-libaddr directory.

 -- Alexis Wilke <alexis@m2osw.com>  Mon,  2 Sep 2019 03:17:02 -0800

libaddr (1.0.17.0~xenial) xenial; urgency=high

  * Upgraded tests to compile against snapcatch2 instead of catch1.x

 -- Alexis Wilke <alexis@m2osw.com>  Sat, 20 Jul 2019 21:47:27 -0800

libaddr (1.0.16.0~xenial) xenial; urgency=high

  * Added a PROJECT_BRIEF to the documentation.
  * Added in=C++ to the MAPPING_EXTENSION.

 -- Alexis Wilke <alexis@m2osw.com>  Tue, 11 Jun 2019 23:41:17 -0800

libaddr (1.0.15.1~xenial) xenial; urgency=high

  * Bump version to get a recompile on launchpad.

 -- Alexis Wilke <alexis@m2osw.com>  Sat, 11 May 2019 18:24:00 -0800

libaddr (1.0.15.0~xenial) xenial; urgency=high

  * Added a class to allow for reading interface names.

 -- Alexis Wilke <alexis@m2osw.com>  Sun, 23 Sep 2018 21:13:58 -0800

libaddr (1.0.14.1~xenial) xenial; urgency=high

  * Bump version to get a recompile on launchpad.

 -- Alexis Wilke <alexis@m2osw.com>  Fri, 27 Jul 2018 00:45:54 -0800

libaddr (1.0.14.0~xenial) xenial; urgency=high

  * Made code -Weffc++ compatible.

 -- Alexis Wilke <alexis@m2osw.com>  Wed, 25 Jul 2018 18:40:25 -0800

libaddr (1.0.13.2~xenial) xenial; urgency=high

  * Bump version to recompile without the -fsanitizer flags.

 -- Alexis Wilke <alexis@m2osw.com>  Wed, 27 Jun 2018 19:46:10 -0800

libaddr (1.0.13.1~xenial) xenial; urgency=high

  * Bump version to recompile with the -fsanitizer flags.

 -- Alexis Wilke <alexis@m2osw.com>  Tue, 26 Jun 2018 20:03:27 -0800

libaddr (1.0.13.0~xenial) xenial; urgency=high

  * Added a class to read the Linux routes (from /proc/net/route).