@@ -1,13 +1,16 @@
 Source: libaddr
-Priority: optional
+Priority: extra
 Maintainer: Alexis Wilke <alexis@m2osw.com>
 Build-Depends: cmake,
     debhelper,
     doxygen,
     graphviz,
-    libexcept-dev (>= 1.0.2.250~xenial),
+    libadvgetopt-dev (>= 2.0.1.0~xenial),
+    libboost-dev,
+    libexcept-dev (>= 1.1.4.0~xenial),
+    libutf8-dev (>= 1.0.6.0~xenial),
     snapcatch2 (>= 2.9.1.0~xenial),
-    snapcmakemodules (>= 1.0.35.3~xenial)
+    snapcmakemodules (>= 1.0.35.3~xenial),
     snapdev (>= 1.1.3.0~xenial)
 Standards-Version: 3.9.4
 Section: libs
