@@ -94,7 +94,7 @@ private:
     void                    parse_address(std::string const & in, std::string const & mask, addr_range::vector_t & result);
     void                    parse_address4(std::string const & in, addr_range::vector_t & result);
     void                    parse_address6(std::string const & in, addr_range::vector_t & result);
-    void                    parse_address_port(std::string address, std::string const & port_str, addr_range::vector_t & result, std::string const & default_address);
+    void                    parse_address_port(std::string address, std::string port_str, addr_range::vector_t & result, bool ipv6);
     void                    parse_mask(std::string const & mask, addr & cidr);
 
     bool                    f_flags[static_cast<int>(flag_t::FLAG_max)] = { true, false, true, false, false, false, false, false, false, false, false, false };
